fix spacing

--- a/src/styles/pages/_about.scss
+++ b/src/styles/pages/_about.scss
@@ -14,10 +14,6 @@
     }
   }
 
-  &-item {
-    border: 1px solid $light-gray;
-  }
-  
   &-gallery-img {
     width: 50%;
     margin-right: 1rem;
