--- a/src/styles/pages/_ills.scss
+++ b/src/styles/pages/_ills.scss
@@ -18,7 +18,6 @@
     }
 
     &-section {
-      padding-top: 4rem;
       & .rt-container {
         display: grid;
         grid-template-columns: repeat(2,1fr);
